// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtualKeyboardButtons renders with virtual keyboard collapsed 1`] = `
<div
  className="virtualKeyboardButtons"
>
  <Button
    className="button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Tab
    </span>
  </Button>
  <Button
    className="button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <StyledIconBase
        iconName="upArrow"
      />
      Up
    </span>
  </Button>
  <Button
    className="button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <StyledIconBase
        className="left"
        iconName="upArrow"
      />
      Left
    </span>
  </Button>
  <Button
    className="button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <StyledIconBase
        className="down"
        iconName="upArrow"
      />
      Down
    </span>
  </Button>
  <Button
    className="button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      <StyledIconBase
        className="right"
        iconName="upArrow"
      />
      Right
    </span>
  </Button>
  <Button
    className="button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Enter
    </span>
  </Button>
</div>
`;

exports[`VirtualKeyboardButtons renders with virtual keyboard not collapsed 1`] = `
<div
  className="virtualKeyboardButtons"
>
  <Button
    className="rectangleButton button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Tab
    </span>
  </Button>
  <div
    className="arrowButtonsContainer"
  >
    <Button
      className="button"
      onClick={[Function]}
      primary={true}
    >
      <span
        className="innerButtonContainer"
      >
        <StyledIconBase
          iconName="upArrow"
        />
        Up
      </span>
    </Button>
    <div
      className="bottomRowButtons"
    >
      <Button
        className="button"
        onClick={[Function]}
        primary={true}
      >
        <span
          className="innerButtonContainer"
        >
          <StyledIconBase
            className="left"
            iconName="upArrow"
          />
          Left
        </span>
      </Button>
      <Button
        className="button"
        onClick={[Function]}
        primary={true}
      >
        <span
          className="innerButtonContainer"
        >
          <StyledIconBase
            className="down"
            iconName="upArrow"
          />
          Down
        </span>
      </Button>
      <Button
        className="button"
        onClick={[Function]}
        primary={true}
      >
        <span
          className="innerButtonContainer"
        >
          <StyledIconBase
            className="right"
            iconName="upArrow"
          />
          Right
        </span>
      </Button>
    </div>
  </div>
  <Button
    className="rectangleButton button"
    onClick={[Function]}
    primary={true}
  >
    <span
      className="innerButtonContainer"
    >
      Enter
    </span>
  </Button>
</div>
`;
